# rmfmt

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  rmfmt.py
tests/: test_rmfmt.py
